Add parsing filepath
- Pass a valid markdown filepath and convert it to HTML

--- a/out.html
+++ b/out.html
@@ -1,6 +1,7 @@
 <html>
-<h2> Title</h2>
-<p>Text of a paragraph</p>
-<h5> Second heading</h5>
-<p>Some more text</p>
+<h3> Palpad</h3>
+<p>A really simple markdown parser + static site generator. </p>
+<p>It supports a small subset of the markdown spec. The goal is to be able to host</p>
+<p>a directory of markdown files, and then use `palpad` to convert the directory</p>
+<p>to valid HTML.</p>
 </html>
