--- a/out.html
+++ b/out.html
@@ -2,6 +2,6 @@
 <h3> Palpad</h3>
 <p>A really simple markdown <i>parser</i> + <b>static</b> site generator. </p>
 <p>It supports a small subset of the markdown spec. The goal is to be able to host</p>
-<p>a directory of markdown files, and then use `palpad` to convert the directory</p>
+<p>a directory of markdown files, and then use <code>palpad</code> to convert the directory</p>
 <p>to valid HTML.</p>
 </html>
