Add support for CodeBlocks
- CodeBlocks can be created with triple backticks on a newline
- They parse all text as "raw_text", so no bold/italic formatting
- All code below triple bacticks will be formatted untill another triple
  bactick set.
- If the file ends with no such ending tokens, the formatting is still
  applied

- Various fixes: Improved error handling, improved in-line backtick
   handling, and formatted codebase

--- a/out.html
+++ b/out.html
@@ -4,4 +4,15 @@
 <p>It supports a small subset of the markdown spec. The goal is to be able to host</p>
 <p>a directory of markdown files, and then use <code>palpad</code> to convert the directory</p>
 <p>to valid HTML.</p>
+<p>This is a code block:</p>
+<pre><code>
+int main() {
+  int a = 1;
+  int b = 2;
+  string s = "Hello this is a **bold** statement. Here's a backtick` for you";
+  int c = a + b;
+  return c;
+}
+</code></pre>
+<p>This, however, isn't <code>``a code block</code>.</p>
 </html>
