Add CSS support
There is a simple flag that inserts a CSS file into the <head> tag of
the HTML body. Originally this was going to be a TOML file which would
be parsed and the formatting would be applied based on that, but I
realized I'm just rewriting CSS in TOML. It's much more simple and
flexible to use a CSS file directly

--- a/README.html
+++ b/README.html
@@ -1,5 +1,6 @@
 <html>
-<h3> Palpad</h3>
+<head><link rel="stylesheet" href="palpad.css"></head>
+<h3><p> Palpad</p></h3>
 <p>A really simple markdown <i>parser</i> + <b>static</b> site generator. </p>
 <p>It supports a small subset of the markdown spec. The goal is to be able to host</p>
 <p>a directory of markdown files, and then use <code>palpad</code> to convert the directory</p>
