--- a/files/general/general1.html
+++ b/files/general/general1.html
@@ -1,4 +1,5 @@
 <html>
+<head><link rel="stylesheet" href="palpad.css"></head>
 <h3><p> Header 1</p></h3>
 <p>Some important text.</p>
 <p>Followed by some more.</p>
