--- a/files/general/general2.html
+++ b/files/general/general2.html
@@ -1,4 +1,5 @@
 <html>
+<head><link rel="stylesheet" href="palpad.css"></head>
 <h6><p> Super <i>Small Header 1</i></p></h6>
 <pre><code>
 Only code here.
