--- a/files/general/general3.html
+++ b/files/general/general3.html
@@ -1,4 +1,5 @@
 <html>
+<head><link rel="stylesheet" href="palpad.css"></head>
 <h6><p> Super Small Header 1</p></h6>
 <p>Some important text.</p>
 <p>Followed by some more.</p>
